syntax = "proto3";

option java_package = "bitspittle.paintkit.api.proto";
option java_outer_classname = "ApiProto";

// Basic messages

message Id {
  bytes value = 1; // Will be converted to / from UUID
}

message Color {
  int32 rgba = 1;
}

message Pt {
  int32 x = 1;
  int32 y = 2;
}

message Size {
  uint32 w = 1;
  uint32 h = 2;
}

message Pixel {
  Pt pt = 1;
  Color color = 2;
}

message Image {
  Id id = 1;
  Size size = 2;
  repeated Pixel pixels = 3;
}

message Canvas {
  Id id = 1;
  repeated Image images = 2;
}

// Commands, Responses, and Events

message Command {
  message CreateCanvas {
    Id userId = 1;
    Size size = 2;
  }

  message DeleteCanvas {
    Id userId = 1; // Used for permissions
    Id canvasId = 2;
  }

  message UpdatePixels {
    Id userId = 1;
    Id imageId = 2;
    repeated Pixel pixels = 3;
  }

  oneof specialized {
    CreateCanvas createCanvasCommand = 1;
    DeleteCanvas deleteCanvasCommand = 2;
    UpdatePixels updatePixelsCommand = 3;
  }
}

message Response {
  message CreateCanvas {
    Id canvasId = 1;
    Id imageId = 2; // New canvas starts with a single image inside it
  }
  message DeleteCanvas {}
  message UpdatePixels {}

  oneof specialized {
    CreateCanvas createCanvasResponse = 1;
    DeleteCanvas deleteCanvasResponse = 2;
    UpdatePixels updatePixelsResponse = 3;
  }
}

message Event {
}
